--- a/packages/venia-concept/template.html
+++ b/packages/venia-concept/template.html
@@ -22,6 +22,8 @@
         <link rel="apple-touch-icon" href="/venia-static/icons/venia_square_57.png">
         <link rel="apple-touch-icon" sizes="180x180" href="/venia-static/icons/apple-touch-icon.png">
         <link rel="preconnect" href="<%= process.env.MAGENTO_BACKEND_URL %>">
+        <link rel="shortcut icon" type="image/x-icon" href="<%= process.env.MAGENTO_BACKEND_URL %>/media/favicon/websites/1/favicon_1_.ico">
+
         <!--
             This following CSS is a copy of the css returned by Google's font API that
             allows us to "skip" a network round trip.
