add portal on plp page

--- a/packages/venia-concept/template.html
+++ b/packages/venia-concept/template.html
@@ -144,6 +144,7 @@
     </head>
     <body class="bg-body font-sans text-base text-colorDefault">
         <div id="root"></div>
+        <div id="modal-root"></div>
 
         <!-- Fallback for when JavaScript is disabled. -->
         <noscript>
